# PCControllerHuman

./: .gitignore  LICENSE  README.md  pyproject.toml  test.html
.ai_memory/: system_prompt.txt
AppForge/: .gitignore  README.md  index.html  package-lock.json  package.json  server_bg.out  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
AppForge/electron/: main.js
AppForge/server/: ai-config.json  ai_agent.py  index.js  package-lock.json  package.json
AppForge/src/: App.tsx  index.css  main.tsx
AppForge/src/components/: AIChatPanel.tsx
AppForge/src/hooks/: useSettingsStore.ts  useWizardStore.ts
AppForge/src/views/: CreateProject.tsx  Dashboard.tsx  Settings.tsx
examples/: basic_usage.py  cerebras_example.py  custom_functions.py  interactive_chat.py  tools_example.py
examples/html_renderer/: index.html  server.py
examples/wizard/: index.html  server.py
living_entity/: __init__.py  core.py
living_entity/agents/: __init__.py  abstract.py  brain.py  spirit.py
living_entity/execution/: __init__.py  executor.py  focus.py  tools.py
living_entity/memory/: __init__.py  context_reducer.py  matrix.py
living_entity/modules/: __init__.py  insight.py  prediction.py
living_entity/prompts/: __init__.py  brain_prompts.py  spirit_prompts.py  spirit_prompts_old.py
living_entity/utils/: __init__.py  logging.py  tokens.py
tests/: test_agents.py  test_executor.py  test_integration.py  test_memory.py  test_modules.py  test_tools.py
tools/: config_generator.py  debug_dashboard.py  memory_inspector.py
(+5 files in other folders)
